add jwk to map instead of overriding
Signed-off-by: ac892247 <a.chmelo@gmail.com>